// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly 1`] = `
<fieldset
  className="root uui-vertical-direction"
>
  <label
    className="container uui-checkbox-container root uui-size-18 mode-form uui-color-primary -clickable"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container uui-checkbox-container root uui-size-18 mode-form uui-color-primary -clickable"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;

exports[`CheckboxGroup should be rendered correctly with props 1`] = `
<fieldset
  className="root uui-horizontal-direction"
>
  <label
    className="container uui-checkbox-container root uui-size-18 mode-form uui-color-primary uui-disabled"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        tabIndex={-1}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container uui-checkbox-container root uui-size-18 mode-form uui-color-primary uui-disabled"
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-checked={false}
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        tabIndex={-1}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;
